# erc-8040-ecosystem

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-testnet.yml
contracts/: .env.example  DEPLOYMENT.md  Makefile  README.md  foundry.toml
contracts/script/: DeployTestnet.s.sol  Verify.s.sol
contracts/script/config/: base-sepolia.json  sepolia.json
contracts/src/: ERC8040.sol  ERC8040Factory.sol  ESGOracle.sol  ESGRegistry.sol
contracts/src/mocks/: MockUSDC.sol  MockUSDT.sol
contracts/test/: DeploymentTest.t.sol
core/: Cargo.toml
core/src/: lib.rs
core/src/compliance/: mod.rs  rules.rs  validator.rs
core/src/esg/: categories.rs  mod.rs  scoring.rs
core/src/iso20022/: bridge.rs  mod.rs  types.rs
core/src/oracle/: mod.rs  provider.rs
core/tests/: integration_tests.rs
cpp-sdk/: CMakeLists.txt  README.md
cpp-sdk/include/erc8040/: compliance.hpp  erc8040.hpp  esg.hpp  iso20022.hpp
cpp-sdk/src/: compliance.cpp  esg.cpp  iso20022.cpp
cpp-sdk/tests/: CMakeLists.txt  test_compliance.cpp  test_esg.cpp
integration/: README.md  architecture.md
integration/swift-bridge/: README.md  iso20022-mapping.md
integration/swift-bridge/examples/: setr010.xml
python-sdk/: README.md  pyproject.toml
python-sdk/src/erc8040_sdk/: __init__.py  compliance.py  esg.py  iso20022.py
python-sdk/tests/: test_compliance.py  test_esg.py  test_iso20022.py
