[project]
name = "erc8040-sdk"
version = "0.1.0"
description = "Python SDK for ERC-8040 Compliance Token Standard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AgronetLabs"}]
keywords = ["ethereum", "erc8040", "esg", "compliance", "defi"]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erc8040_sdk"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
